--- a/app/views/terms_of_memberships/_form.html.erb
+++ b/app/views/terms_of_memberships/_form.html.erb
@@ -1,16 +1,10 @@
+<% # First step %>
 <div class="step" id="first">
-  <div class="control-group">
-    <h3 class="wizard_step">
-      <span>Step </span>
-      <span class="wizard_step_circle step_selected">1</span>
-      <span class="wizard_step_circle">2</span>
-      <span class="wizard_step_circle">3</span>
-    </h3>
-  </div>
+  <div class="control-group"><%= wizard_steps_indicator(1) %></div>
   <div class="control-group">
     <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.plan_name'), :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :name, :class => 'text_field', :value => '' %>
+      <%= f.text_field :name, :class => 'text_field required', :value => 'test' %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.plan_name'), 
         :content => t('lorem') } %> 
@@ -19,7 +13,7 @@
   <div class="control-group">
     <%= f.label :api_role, t('activerecord.attributes.terms_of_membership.wizard.external_code'), :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :api_role, :class => 'text_field input-small' %>
+      <%= f.text_field :api_role, :value => '', :class => 'text_field input-small', :value => '2' %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.external_code'), 
         :content => t('lorem') } %> 
@@ -28,7 +22,7 @@
   <div class="control-group">
     <%= f.label :description, t('activerecord.attributes.terms_of_membership.wizard.description'), :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_area :description, :class => 'text_area', :rows => 5 %>
+      <%= f.text_area :description, :class => 'text_area', :rows => 5, :value => '3' %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.description'), 
         :content => t('lorem') } %> 
@@ -36,29 +30,25 @@
   </div>
 </div>
 
+
+<% # Second step %>
 <div class="step" id="second">  
+  <div class="control-group"><%= wizard_steps_indicator(2) %></div>
+  
   <div class="control-group">
-    <h3 class="wizard_step">
-      <span>Step </span>
-      <span class="wizard_step_circle">1</span>
-      <span class="wizard_step_circle step_selected">2</span>
-      <span class="wizard_step_circle">3</span>
-    </h3>
-  </div>
-  <div class="control-group">
-    <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.installment_amount'), :class => 'control-label' %>
+    <%= label_tag 'initial_fee_amount', t('activerecord.attributes.terms_of_membership.wizard.installment_amount'), :class => 'control-label' %>
     <div class="controls">
-      $&nbsp;<%= f.text_field :installment_amount, :class => 'text_field input-small', :value => '0.00' %>
+      <%= text_field_tag 'initial_fee_amount', nil, :class => 'text_field input-small required', :placeholder => '$0.00', :value => '4' %>
     </div>
   </div>
 
   <div class="control-group">
-    <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.provisional_days'), :class => 'control-label' %>
+    <%= label_tag 'trial_period_amount', t('activerecord.attributes.terms_of_membership.wizard.provisional_days'), :class => 'control-label' %>
     <div class="controls">
-      $&nbsp;<%= f.text_field :provisional_days, :class => 'text_field input-small', :value => '0.00' %>
+      <%= text_field_tag 'trial_period_amount', nil, :class => 'text_field input-small required', :placeholder => '$0.00', :value => '5' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.lasting') %>
-      <%= f.text_field :provisional_days, :class => 'text_field input-small', :value => '0' %>
-      <%= select_for_date_span("provisional_days_time_span") %>
+      <%= text_field_tag 'trial_period_lasting', nil, :class => 'text_field input-small required', :placeholder => '0', :value => '6' %>
+      <%= select_for_date_span("trial_period_lasting_time_span") %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.provisional_days'), 
         :content => t('lorem') } %> 
@@ -66,7 +56,7 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.at_the_end_of_trial'), :class => 'control-label' %>
+    <%= label_tag 'at_the_end_of_trial', t('activerecord.attributes.terms_of_membership.wizard.at_the_end_of_trial'), :class => 'control-label' %>
     <div class="controls">
       <%= radio_button_tag 'at_the_end_of_trial', 'payment', true %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.payment_is_expected') %>&nbsp;
@@ -79,28 +69,26 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.recurring_amount'), :class => 'control-label' %>
+    <%= label_tag 'recurring_amount', t('activerecord.attributes.terms_of_membership.wizard.recurring_amount'), :class => 'control-label' %>
     <div class="controls">
-      $&nbsp;<%= f.text_field :recurring_amount, :class => 'text_field input-small', :value => '0.00' %>
+      <%= text_field_tag 'recurring_amount', nil, :class => 'text_field input-small required', :placeholder => '$0.00', :value => '7' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.every') %>
-      <%= f.text_field :recurring_amount_days, :class => 'text_field input-small', :value => '0' %>
+      <%= text_field_tag 'recurring_amount_days', nil, :class => 'text_field input-small required', :placeholder => '0', :value => '8' %>
       <%= select_for_date_span("recurring_amount_days_time_span") %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.recurring_amount'), 
         :content => t('lorem') } %> 
     </div>
   </div>
-
   <div class="control-group">
-    <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.suscription_terms'), :class => 'control-label' %>
+    <%= label_tag 'suscription_terms', t('activerecord.attributes.terms_of_membership.wizard.suscription_terms'), :class => 'control-label' %>
     <div class="controls">
       <%= radio_button_tag 'suscription_terms', 'until_cancelled', true %>
-      <span id="label_for_until_cancelled"><%= t('activerecord.attributes.terms_of_membership.wizard.bill_until_cancelled') %></span>
-      <br />
+      <span id="label_for_until_cancelled"><%= t('activerecord.attributes.terms_of_membership.wizard.bill_until_cancelled') %></span><br />
       <%= radio_button_tag 'suscription_terms', 'stop_cancel_after' %>
       <span id="label_for_stop_billing_after"><%= t('activerecord.attributes.terms_of_membership.wizard.stop_billing_after') %></span>
-      <%= f.text_field :suscription_terms_stop_billing_after_payment_days, :class => 'text_field input-small', :value => '0' %>
-      <%= select_for_date_span("suscription_terms_stop_billing_after_payment_days_time_span") %>
+      <%= text_field_tag 'suscription_terms_stop_billing_after', nil, :class => 'text_field input-small', :placeholder => '0', :value => '9' %>
+      <%= select_for_date_span("suscription_terms_stop_billing_after_time_span") %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.suscription_terms'), 
         :content => t('lorem') } %> 
@@ -108,26 +96,19 @@
   </div>
 </div>
 
-<div class="step" id="third">
-  <div class="control-group">
-    <h3 class="wizard_step">
-      <span>Step </span>
-      <span class="wizard_step_circle">1</span>
-      <span class="wizard_step_circle">2</span>
-      <span class="wizard_step_circle step_selected">3</span>
-    </h3>
-  </div>
 
+<% # Third step %>
+<div class="step" id="third">
+  <div class="control-group"><%= wizard_steps_indicator(3) %></div>
   <div class="control-group">
-    <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.if_cannot_bill_member_then'), :class => 'control-label' %>
+    <%= label_tag 'if_cannot_bill_member', t('activerecord.attributes.terms_of_membership.wizard.if_cannot_bill_member_then'), :class => 'control-label' %>
     <div class="controls">
-      <%= radio_button_tag 'if_cannot_bill_member', 'cancel', true %>
-      <%= t('activerecord.attributes.terms_of_membership.wizard.cancel') %>
+      <%= radio_button_tag 'if_cannot_bill_member', 'cancel', true %><%= t('activerecord.attributes.terms_of_membership.wizard.cancel') %>
       <br />
       <%= radio_button_tag 'if_cannot_bill_member', 'suspend_for' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.suspend_for') %>
-      <%= f.text_field :suscription_terms_stop_billing_after_payment_days, :class => 'text_field input-small', :value => '0' %>
-      <%= select_for_date_span("suscription_terms_stop_billing_after_payment_days_time_span") %>
+      <%= text_field_tag 'if_cannot_bill_member_suspend_for', nil, :class => 'text_field input-small', :placeholder => '0', :value => '10' %>
+      <%= select_for_date_span("if_cannot_bill_member_suspend_for_time_span") %>
       <br />
       <%= radio_button_tag 'if_cannot_bill_member', 'downgrade_to' %>
       <%= t('activerecord.attributes.terms_of_membership.wizard.downgrade_to') %>
@@ -137,25 +118,24 @@
         :content => t('lorem') } %> 
     </div>
   </div>
-
   <div class="control-group">
-    <%= f.label :name, t('activerecord.attributes.terms_of_membership.wizard.upgrade_to'), :class => 'control-label' %>
-    
+    <%= label_tag 'upgrade_to_tom', t('activerecord.attributes.terms_of_membership.wizard.upgrade_to'), :class => 'control-label' %>
     <div class="controls">
-      <%= select_for_toms('upgrade_to_tom') %>
-      <%= t('activerecord.attributes.terms_of_membership.wizard.after') %>
-      <%= f.text_field :upgrade_to_tom_days, :class => 'text_field input-small', :value => '0' %>
+      <%= select_for_toms('upgrade_to_tom') %><br />
+      <%= t('activerecord.attributes.terms_of_membership.wizard.after') %>      
+      <%= text_field_tag 'upgrade_to_tom_days', nil, :class => 'text_field input-small', :placeholder => '0', :value => '11' %>
       <%= select_for_date_span("upgrade_to_tom_days_time_span") %>
       <%= render :partial => "shared/help", :locals => { 
         :title => t('activerecord.attributes.terms_of_membership.wizard.upgrade_to'), 
         :content => t('lorem') } %> 
     </div>
   </div>
-
 </div>
 
+<div id="data"></div>
+
 <div id="" class="form-actions">
-  <%= link_to t('.cancel', :default => t("helpers.links.cancel")), terms_of_memberships_path, :class => 'btn' %>
+  <%= link_to t('.cancel', :default => t("helpers.links.cancel")), terms_of_memberships_path, :class => 'btn', :confirm => "Do you really want to leave this page?\nAll your changes will be lost." %>
   <div style = "float: right;">
     <%= f.submit "clear", :id => 'back', :class => 'btn', :type => "reset" %>
     <%= f.submit nil, :id => 'next', :class => 'btn btn-primary' %>
