--- a/app/views/members/_search.html.erb
+++ b/app/views/members/_search.html.erb
@@ -3,8 +3,8 @@
 <table class="table table-bordered table-condensed" id="table_member_search_result">
   <thead>
   	<tr>
-      <th style="width: 110px;"><%= sortable "members.status", t('activerecord.attributes.member.status') %></th>
-      <th> <%= sortable "members.id", t('activerecord.attributes.member.id') %> </th>
+      <th style="width: 120px;"><%= sortable "members.status", t('activerecord.attributes.member.status') %></th>
+      <th style="width: 125px;"> <%= sortable "members.id", t('activerecord.attributes.member.id') %> </th>
       <% if @current_club.requires_external_id %>
         <th> <%= t('activerecord.attributes.member.external_id') %> </th>
       <% end %>
