Wizard fields styles added

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -78,3 +78,11 @@
 	display: inline-block;
 }
 
+form#tom_wizard_form .text_field.error {
+  border-color: red;
+}
+
+form#tom_wizard_form .controls label.error {
+  display:none !important;
+}
+
