--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -32,7 +32,11 @@
   <tr>
   <tr>
     <td> <%= t('activerecord.attributes.terms_of_membership.upgrade_to') %>: 
-         <%= @tom.upgrade_tom.name %> (ID: <%= @tom.upgrade_tom_id %>) </td>
+      <% if @tom.upgrade_tom != nil %>
+         <%= @tom.upgrade_tom.name %> (ID: <%= @tom.upgrade_tom_id %>) 
+      <% else %>(Not set)
+      <% end %>
+    </td>
     <td> <%= t('activerecord.attributes.terms_of_membership.upgrade_tom_period') %>: 
          <%= @tom.upgrade_tom_period %> </td>
     <td> <%= t('activerecord.attributes.terms_of_membership.suspension_period') %>: 
