fixed toms show page. Added information missing and also separated it.

--- a/app/views/terms_of_memberships/show.html.erb
+++ b/app/views/terms_of_memberships/show.html.erb
@@ -19,40 +19,58 @@
       <td>&nbsp;</td>
     <% end %>
   </tr>
+  
   <tr>
     <td> <%= t('activerecord.attributes.terms_of_membership.initial_fee') %>: 
          <%= number_to_currency(@tom.initial_fee) %> </td>
     <td> <%= t('activerecord.attributes.terms_of_membership.payment_is_expected') %>: 
-         <%= @tom.is_payment_expected %> </td>
+         <%= @tom.is_payment_expected ? 'Yes' : 'No' %> </td>
     <td> <%= t('activerecord.attributes.terms_of_membership.trial_period') %>: 
          <%= number_to_currency(@tom.trial_period_amount) %> </td>
     <td> <%= t('activerecord.attributes.terms_of_membership.installment_period') %>: 
-         <%= @tom.installment_period %> </td>
+         <%= @tom.installment_period.nil? ? 0 : @tom.installment_period  %>  <%= t('days') %> </td>
   </tr>
   <tr>
+    <td> <%= t('activerecord.attributes.terms_of_membership.suscription_limits') %>: 
+         <%= @tom.suscription_limits %> </td>
+    <td> <%= t('activerecord.attributes.terms_of_membership.external_code') %>: 
+         <%= @tom.api_role %> </td>
+    <td></td>
+    <td></td>
+  </tr>
+
+  <tr><th colspan='4'> Cancelation Feature </th></tr>
+  <tr>
+    <td> <%= t('activerecord.attributes.terms_of_membership.if_cannot_bill') %>: 
+         <%= @tom.if_cannot_bill %> </td>
+    <td> <%= t('activerecord.attributes.terms_of_membership.downgrade_to') %>: 
+      <% if @tom.downgrade_tom %>
+         <%= @tom.downgrade_tom.name %> (ID: <%= @tom.downgrade_tom_id %>) 
+      <% else %>(Not set)
+      <% end %>
+    </td>
+    <td> <%= t('activerecord.attributes.terms_of_membership.suspension_period') %>: 
+      <%= @tom.suspension_period.nil? ? 0 : @tom.suspension_period  %>  <%= t('days') %> </td>
+    <td> </td>
+  </tr>
+
+  <tr><th colspan='4'> Upgrade Feature </th></tr>
   <tr>
     <td> <%= t('activerecord.attributes.terms_of_membership.upgrade_to') %>: 
-      <% if @tom.upgrade_tom != nil %>
+      <% if @tom.upgrade_tom %>
          <%= @tom.upgrade_tom.name %> (ID: <%= @tom.upgrade_tom_id %>) 
       <% else %>(Not set)
       <% end %>
     </td>
     <td> <%= t('activerecord.attributes.terms_of_membership.upgrade_tom_period') %>: 
-         <%= @tom.upgrade_tom_period %> </td>
-    <td> <%= t('activerecord.attributes.terms_of_membership.suspension_period') %>: 
-         <%= @tom.suspension_period %> </td>
-    <td> <%= t('activerecord.attributes.terms_of_membership.suscription_limits') %>: 
-         <%= @tom.suscription_limits %> </td>
+      <%= @tom.upgrade_tom_period.nil? ? 0 : @tom.upgrade_tom_period  %>  <%= t('days') %> </td>
+    <td></td>
+    <td></td>
   </tr>
+
+  <tr><th colspan='4'> <%= t('activerecord.attributes.terms_of_membership.description') %> </th></tr>
   <tr>
-    <td> <%= t('activerecord.attributes.terms_of_membership.if_cannot_bill') %>: 
-         <%= @tom.if_cannot_bill %> </td>
-    <td> </td>
-    <td> </td>
-    <td> </td>
-  </tr>
-  <tr>
-    <td colspan="4" class="comment"> <%= t('activerecord.attributes.terms_of_membership.description') %>: <%= @tom.description %> </td>
+    <td colspan="4" class="comment"> <%= @tom.description %> </td>
   </tr>
 </table>
 
